--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bcrypt": "^3.0.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.9",
         "mongoose-unique-validator": "^2.0.3",
         "underscore": "^1.12.0"
