--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
         "bcrypt": "^3.0.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.2.0",
         "google-auth-library": "^6.1.4",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.9",
         "mongoose-unique-validator": "^2.0.3",
-        "underscore": "^1.12.0"
+        "nodemon": "^2.0.7",
+        "to": "^0.2.9",
+        "underscore": "^1.12.0",
+        "update": "^0.7.4"
     }
 }
